<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Carpooling</string>
    <string name="app_id">708510685834286</string> 
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="es_registerTravel">Por favor llenar los siguientes campos respecto a la información relativa a su viaje.</string>
    <string name="es_source">Ciudad Origen</string>
    <string name="es_destination">Ciudad Destino</string>
    <string name="es_date">Fecha</string>
    <string name="es_hour">Hora</string>
    <string name="es_sourcePoint">Punto de Partida</string>
    <string name="es_sourcePointGPS">Punto de Partida GPS</string>
    <string name="es_destinationPoint">Punto de Llegada</string>
    <string name="es_destinationPointGPS">Punto de Llegada GPS</string>
    <string name="es_register">Registrar</string>
    <string name="es_cancel">Cancelar</string>
    <string name="title_activity_register_travel">Registro de Viaje</string>
    <string name="es_registring">Registrando</string>
    <string name="es_canceling">Cancelado</string>
    <string name="es_finish">Finalizado</string>
    <string name="es_registered">Registrado</string>
    <string name="es_loaded">Datos Cargados</string>
    <string name="es_search">Buscar</string>
    <string name="name">user</string>
    <string name="pass">pass</string>
    <string name="es_notravel">No posee Viajes Inscritos</string>
    <string name="error_message">Usuario y contraseña incorrectos, por favor ingrese nuevamente.</string>
    <string name="title_activity_search__travel">Search_Travel</string>
    <string name="title_activity_search_travel">SearchTravel</string>

</resources>
